// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Async fetchAllAlbums fetch all albums 1`] = `
Array [
  Object {
    "totalAlbums": 100,
    "type": "GET_ALL_ALBUMS",
  },
]
`;

exports[`Async fetchAllAlbums throws error when album cannot be fetched 1`] = `
Array [
  Object {
    "errorMessage": "Cannot fetch all albums",
    "type": "GET_ALL_ALBUMS_ERROR",
  },
]
`;

exports[`Async getAlbums gets albums 1`] = `
Array [
  Object {
    "albums": Array [
      Object {
        "id": 1,
        "title": "quidem molestiae enim",
        "userId": 1,
      },
      Object {
        "id": 2,
        "title": "sunt qui excepturi placeat culpa",
        "userId": 1,
      },
      Object {
        "id": 3,
        "title": "omnis laborum odio",
        "userId": 1,
      },
      Object {
        "id": 4,
        "title": "non esse culpa molestiae omnis sed optio",
        "userId": 1,
      },
      Object {
        "id": 5,
        "title": "eaque aut omnis a",
        "userId": 1,
      },
    ],
    "type": "GET_ALBUMS",
  },
]
`;
